MacPro提交 修复 btnAddOk无响应和EditText无法Get值得问题

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -5,6 +5,6 @@
     <string name="tvAddContacts">Add Contact</string>
     <string name="tvName">Name:</string>
     <string name="tvNumber">Number:</string>
-    <string name="btnAddOK">OK</string>
+    <string name="btnAddOk">OK</string>
     <string name="btnAddCancel">Cancel</string>
 </resources>
